--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modalize": "^2.0.4",
+    "react-native-onboarding-swiper": "^1.1.1",
     "react-native-rate": "^1.2.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
+    "react-native-share": "^3.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.11.7"
   },
