--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-places-autocomplete": "^1.7.2",
     "react-native-modalize": "^2.0.4",
     "react-native-onboarding-swiper": "^1.1.1",
     "react-native-rate": "^1.2.1",
