--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@use-expo/font": "^2.0.0",
     "axios": "0.18.0",
-    "expo": "^38.0.0",
+    "expo": "^38.0.3",
+    "expo-linear-gradient": "~8.2.1",
     "intl": "^1.2.5",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -26,7 +28,7 @@
     "react-native-onboarding-swiper": "^1.1.1",
     "react-native-rate": "^1.2.1",
     "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-share": "^3.6.0",
     "react-native-swiper": "^1.6.0",
